# lockbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README_CN.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  pages.yml  publish.yml
docker/: Dockerfile
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
frontend/src/assets/styles/: theme.css
frontend/src/components/: AuthFooter.vue  BotCard.vue  DemoChat.vue  LogViewer.vue  StatusBadge.vue
frontend/src/i18n/: en.js  index.js  zh-CN.js
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  bots.js
frontend/src/utils/: api.js  api.mock.js  demoBotEngine.js  demoMode.js  helpers.js  mockData.js  stateValidation.js
frontend/src/views/: BotDetail.vue  BotForm.vue  BotList.vue  ForceChangePassword.vue  Login.vue  NotFound.vue  ProfileSettings.vue  Register.vue
frontend/src/views/admin/: AuditLogsView.vue  (+3 more)
python/lockbot/core/: base_bot.py  bot_instance.py  config.py  device_bot.py  device_usage_alert.py  device_usage_utils.py  entry.py  env.py  handler.py  io.py  message_adapter.py  msg_utils.py  node_bot.py  queue_bot.py  request.py  scheduler.py  utils.py
scripts/: create_admin.py  save_image.sh
scripts/dev/: backend.sh  frontend.sh
tests/backend/: conftest.py  test_audit.py  test_auth.py  test_bot_authz.py  test_bot_lifecycle.py  test_bot_manager.py  test_bots.py  test_encryption.py  test_webhook.py
tests/core/: test_bot_instance.py  test_config.py  test_device_bot.py  test_device_usage_alert.py  test_device_usage_utils.py  test_dingtalk_adapter.py  test_env.py  test_feishu_adapter.py  test_handler.py  test_infoflow_links.py  test_io.py  test_node_bot.py  test_queue_bot.py  test_request.py  test_scheduler.py  test_slack_adapter.py  test_utils.py
tools/: create_super_admin.py  gen_keys.py  reset_super_admin_password.py
(+28 files in other folders)
